@@ -23,3 +23,5 @@ extern const LPCTSTR addressFormat;
 extern const LPCTSTR offsetFormat;
 extern const LPCTSTR sizeFormat;
 
+#pragma comment(linker, "\"/manifestdependency:type='win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' processorArchitecture='*' publicKeyToken='6595b64144ccf1df' language='*'\"")
+
